# Azure-FinOps-Optimizer-MCP

./: .env.example  .gitignore  CONTRIBUTING.md  CUSTOMER_EXPERIENCE.md  GIT_SETUP.md  LICENSE  PUBLISHED.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  WEB_DASHBOARD.md  WINDOWS_TESTING.md  agent.md  auth.py  azure_clients.py  examples.py  policy.json  pyproject.toml  requirements.txt  security_guide.md  server.py  setup_azure_role.py  start_dashboard.bat  web_dashboard.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
templates/: dashboard.html
tests/: __init__.py
tools/: __init__.py  anomaly_detector.py  budget_validator.py  compliance_overlay.py  csp_auditor.py  executive_summary.py  governance_advisor.py
utils/: __init__.py  error_handling.py  logging_config.py  pricing.py
